tests/paczka1/small_fuzzy/91474259.err
Error in line 4: hMmgy A534 ZZ0,6
Error in line 1: bwChbkXoCkP A534 47,3
Error in line 3: wxf1 A842 43,9
